--- a/Formazione2019.PulsantONE/Formazione2019.PulsantONE.Services/Formazione2019.PulsantONE.Services.csproj
+++ b/Formazione2019.PulsantONE/Formazione2019.PulsantONE.Services/Formazione2019.PulsantONE.Services.csproj
@@ -4,4 +4,10 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
+      <PackageReference Include="System.Device.Gpio" Version="0.1.0-prerelease.19171.3" />
+      <PackageReference Include="Iot.Device.Bindings" Version="0.1.0-prerelease.19171.3" />
+    </ItemGroup>
+
 </Project>
