--- a/Formazione2019.PulsantONE/Formazione2019.PulsantONE.Services/Formazione2019.PulsantONE.Services.csproj
+++ b/Formazione2019.PulsantONE/Formazione2019.PulsantONE.Services/Formazione2019.PulsantONE.Services.csproj
@@ -1,13 +1,48 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.1.0" />
       <PackageReference Include="System.Device.Gpio" Version="0.1.0-prerelease.19171.3" />
-      <PackageReference Include="Iot.Device.Bindings" Version="0.1.0-prerelease.19171.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_UnmanagedRegistrationCache Remove="obj\Formazione2019.PulsantONE.Services.csproj.UnmanagedRegistration.cache" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ResolveComReferenceCache Remove="obj\Debug\netcoreapp3.0\Formazione2019.PulsantONE.Services.csproj.ResolveComReference.cache" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <IntermediateAssembly Remove="obj\Debug\netcoreapp3.0\Formazione2019.PulsantONE.Services.dll" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_DebugSymbolsIntermediatePath Remove="obj\Debug\netcoreapp3.0\Formazione2019.PulsantONE.Services.pdb" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_DeploymentManifestEntryPoint Remove="obj\Debug\netcoreapp3.0\Formazione2019.PulsantONE.Services.dll" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ApplicationManifest Remove="obj\Debug\netcoreapp3.0\Native.Formazione2019.PulsantONE.Services.manifest" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <DeployManifest Remove="obj\Debug\netcoreapp3.0\Formazione2019.PulsantONE.Services.application" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ClsidMap Remove="obj\Debug\netcoreapp3.0\Formazione2019.PulsantONE.Services.clsidmap" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <RegFreeComManifest Remove="obj\Debug\netcoreapp3.0\Formazione2019.PulsantONE.Services.X.manifest" />
     </ItemGroup>
 
 </Project>
