--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,12 +33,9 @@
             "windows": {
                 "pipeTransport": {
                     "pipeCwd": "${workspaceRoot}",
-                    "pipeProgram": "plink",
+                    "pipeProgram": "C:\\Program Files\\PuTTY\\plink.exe",
                     "pipeArgs": [
-                        "-ssh",
-                        "-pw",
-                        "raspberry",
-                        "pi@raspberrypi.local"
+                        "pi@192.168.1.6"
                     ],
                     "debuggerPath": "home/pi/vsdbg/vsdbg"
                 }
